--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,17 @@
     <string name="fb_login_protocol_scheme">fb949336838939681</string>
 
     <!-- Twitter consumer key and secret -->
-<!--    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>-->
-<!--    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>-->
+    <!--    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>-->
+    <!--    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>-->
 
+    <string name="historical_site_name">Historical Site Name</string>
+    <string name="historical_site_description">Historical Site Description</string>
+    <string name="historical_site_location">Historical Site Location</string>
+    <array name="historical_types">
+        <item>Medieval</item>
+        <item>Early Modern</item>
+        <item>Modern</item>
+    </array>
+    <string name="site_profile_picture">Site Profile Picture</string>
+    <string name="upload_site">Upload Site!</string>
 </resources>
