routing, minor fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="about_uncovering_history">About Uncovering History</string>
     <string name="work_in_progress">Work In Progress</string>
     <string name="view_site">View Site</string>
-    <string name="password">Password</string>
+    <string name="password">Password (6-12)</string>
     <string name="email">Email</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
@@ -54,5 +54,5 @@
     <string name="return_to_login">Return to Login</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="user_name">User Name</string>
-    <string name="confirm_login">Confirm Login</string>
+    <string name="confirm_email">Confirm Email</string>
 </resources>
